--- a/css/bootsnav.css
+++ b/css/bootsnav.css
@@ -331,6 +331,8 @@ ul.cart-list > li.total > span{
     background-color: #333;
     padding: 10px 0;
     display: none;
+    position: relative;
+    top: -16px;
 }
 
 .top-search input.form-control{
@@ -462,15 +464,18 @@ nav.navbar.bootsnav .share ul > li > a{
     background-color: #cfcfcf;
     color: #fff;
 }
-
+.banar-video{
+    position: absolute; width: 130%;height: 130%;transform: translate(-50%,-50%);left:50%;top: 50%;
+}
 /* Transparent
 =================================*/
 nav.navbar.bootsnav{
-    padding: 10px 0;
+    padding: 16px 0;
 }
 nav.navbar.bootsnav img{
-    height: 85px;
+    height: 105px;
     width: auto !important;
+    margin-top: -10px;
 }
 nav.navbar.bootsnav.navbar-fixed{
     position: fixed;
@@ -1012,8 +1017,9 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         margin: 0 !important;
     }
     nav.navbar.bootsnav .navbar-brand img{
-        height: 58px;
+        height: 83px;
         width: auto !important;
+        margin-top: -12px
     }
     
     nav.navbar.bootsnav .navbar-header {
@@ -1401,6 +1407,9 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         padding-left: 15px;
         padding-right: 15px;
     }
+    .banar-video{
+        position: absolute; width: 100%;height: auto;transform: translateX(-50%);left:50%;top: 0%;
+    }
     
     .attr-nav{
         right: 30px;
@@ -1483,14 +1492,23 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         padding-bottom: 15px !important;
     }
 }
-
+@media (max-width: 635px) {
+    .banar-video{
+        width: auto;
+        height: 100%;
+    }
+}
 @media (min-width: 480px) and (max-width: 640px) {
     nav.bootsnav.navbar-full ul.nav{
         padding-top: 30px;
         padding-bottom: 30px;
     }
 }
-
+@media (max-width:480px){
+    .home-banner{
+        top: 30px;
+    }
+}
 
 nav.navbar.bootsnav ul.nav > li > a{font-size: 14px; text-transform: uppercase; padding: 22px 10px;}
 nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{ font-family: 'simple-line-icons'; content: "\e604"; font-size: 8px;}
