--- a/css/bootsnav.css
+++ b/css/bootsnav.css
@@ -1410,6 +1410,10 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     .banar-video{
         position: absolute; width: 100%;height: auto;transform: translateX(-50%);left:50%;top: 0%;
     }
+    .home-banner{
+        background-image: url(../images/video.jpg);
+        background-size: cover;
+    }
     
     .attr-nav{
         right: 30px;
