--- a/css/bootsnav.css
+++ b/css/bootsnav.css
@@ -1411,7 +1411,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         position: absolute; width: 100%;height: auto;transform: translateX(-50%);left:50%;top: 0%;
     }
     .home-banner{
-        background-image: url(../images/video.jpg);
+        background-image: url(../images/video.jpg) !important;
         background-size: cover;
     }
     
